traducao das paginas

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -14,10 +14,67 @@
     "_index": "traducao para index",
     "BENEFICIOS": "BENEFITS",
     "HIW": "HOW IT WORKS",
-    "RESERVA_ONLINE": "Book Online",
+    "RESERVA_ONLINE": "BOOK ONLINE",
     "RYP": "Receive your Package",
     "EIA": "Enjoy Internet Anywhere",
     "RWD": "Return the Wifi Device",
     "TO": "TOP OFFERS",
-    "PN": "PLAN NAME"
+    "PN": "PLAN NAME",
+    "_servicos": "traducao para servicos",
+    "SN": "ABOUT US",
+    "CFUNC": "HOW IT WORKS",
+    "ATD": "ABOUT DEVICE",
+    "_planos": "traducao para planos",
+    "OWP": "OUR WIFI PLANS",
+    "_faq": "traducao faq",
+    "FAKQ": "FREQUENTLY ASKED QUESTIONS",
+    "GENERAL": "GENERAL",
+    "USAGE": "USAGE",
+    "B_PAYMENT": "BOOKING AND PAYMENT",
+    "P_SHIPPING": "PICKUP OR SHIPPING",
+    "RETURN": "RETURN",
+    "MOD_CAN": "MODIFICATION AND CANCELLATION",
+    "_booking": "traducao booking",
+    "BOOKING": "BOOKING",
+    "ORDER": "ORDER",
+    "BI": "BILING INFORMATION",
+    "CCH": "CONFIRME & CHECKOUT",
+    "SN_DAYWIFI": "Select the number of days for wifi",
+    "CPU_LOC": "confirm pick-up location",
+    "FN": "Flight Number (optional)",
+    "PICKUP_DATE":"Pick-up date",
+    "CR_LOC":"Confirm return location",
+    "NEXT": "NEXT",
+    "FNAME": "First Name",
+    "LNAME": "Last Name",
+    "SADDRESS": "Street Address",
+    "city": "city",
+    "Zcode": "Zip code",
+    "Phone": "Phone",
+    "Country": "Country",
+    "Email": "Email",
+    "BACK": "BACK",
+    "T_CONDITION": "Terms and Conditions",
+    "IAGRY": "I agry to the",
+    "PPAY": "PROCCED TO PAYMENT",
+    "TOTAL": "TOTAL",
+    "Duration": "Duration",
+    "Ending": "Ending",
+    "Starting": "Starting",
+    "days": "days",
+    "CNumber": "Card Number",
+    "cardExpiryDate": "card Expiry Date",
+    "CardHolderName": "Card Holder Name",
+    "CVC": "CVC",
+    "PAY": "PAY",
+    "SUMARY": "SUMARY",
+    "WP": "Wifi Plan",
+    "C_Policy": "Cancellation Policy:",
+    "Refunds":"Refunds are possible up to 4 days before selected WiFi pickup date. WiFi cancellations after this point are not refundable. Please contact us via support@wifianywhere.com if you wish to cancel or change your order after purchase.",
+    "Disclamer": "Disclamer:",
+    "TheWifianywhere": "The Wifi Anywhere service is provided by iMedia. For post sales support, please contact iMedia directly",
+    "_pagina error": "tradducao pagina erro",
+    "error": "pag not found"
+
+
 }
