--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -1,4 +1,5 @@
 {
+    "_navba": "tarducao do navbar",
     "SERVICOS": "SERVICES",
     "PLANOS": "PLANS",
     "FAQ": "FAQ",
@@ -7,6 +8,7 @@
     "FRA": "FRA",
     "POR": "POR",
     "ONLINE_BOOKING": "RESERVATION EN LIGNE",
+    "_footer": "tarducao do footer, o q nao foi traduziodo em navbar",
     "RESERVAS": "En ligne",
     "CONTATOS": "Contacts",
     "_index": "traducao para index",
@@ -17,5 +19,62 @@
     "EIA": "Profitez d'Internet Anywhere",
     "RWD": "Renvoyer le périphérique Wi-fi",
     "TO": "TOP OFFRES",
-    "PN": "NOM DU PLAN"
+    "PN": "NOM DU PLAN",
+    "_servicos": "traducao para servicos",
+    "SN": "À PROPOS DE NOUS",
+    "CFUNC": "comment ça marche",
+    "ATD": "À PROPOS DE L'APPAREIL",
+    "_planos": "traducao para planos",
+    "OWP": "NOS PLANS WIFI",
+    "_faq": "traducao faq",
+    "FAKQ": "QUESTIONS FRÉQUEMMENT POSÉES",
+    "GENERAL": "GÉNÉRAL",
+    "USAGE": "USAGE",
+    "B_PAYMENT": "RÉSERVATION ET PAIEMENT",
+    "P_SHIPPING": "PICK-UP OU EXPÉDITION",
+    "RETURN": "REVENIR",
+    "MOD_CAN": "MODIFICATION ET ANNULATION",
+    "_booking": "traducao booking",
+    "BOOKING": "RÉSERVATION",
+    "ORDER": "ORDRE",
+    "BI": "DÉTAILS DE FACTURATION",
+    "CCH": "CONFIRME & CHECKOUT",
+    "SN_DAYWIFI": "Sélectionnez le nombre de jours pour le wifi",
+    "CPU_LOC": "confirmer le lieu de prise en charge",
+    "FN": "Numéro de vol (facultatif)",
+    "PICKUP_DATE":"Date de ramassage",
+    "CR_LOC":"Confirmer le lieu de retour",
+    "NEXT": "SUIVANT",
+    "FNAME": "Prénom",
+    "LNAME": "Nom de famille",
+    "SADDRESS": "Adresse de rue",
+    "city": "ville",
+    "Zcode": "Code postal",
+    "Phone": "Téléphone",
+    "Country": "Pays",
+    "Email": "Email",
+    "BACK": "RETOUR",
+    "T_CONDITION": "Termes et conditions",
+    "IAGRY": "J'agry au",
+    "PPAY": "PROCÉDER AU PAIEMENT",
+    "TOTAL": "TOTAL",
+    "Duration": "Durée",
+    "Ending": "Fin",
+    "Starting": "Départ",
+    "days": "jours",
+    "CNumber": "Numéro de carte",
+    "cardExpiryDate": "date d'expiration de la carte",
+    "CardHolderName": "Nom du titulaire",
+    "CVC": "CVC",
+    "PAY": "PAYER",
+    "SUMARY": "RÉSUMÉ",
+    "WP": "Plan wifi",
+    "C_Policy": "Politique d'annulation:",
+    "Refunds":"Les remboursements sont possibles jusqu'à 4 jours avant la date de prise en charge WiFi sélectionnée. Les annulations WiFi après ce point ne sont pas remboursables. Veuillez nous contacter via support@wifianywhere.com si vous souhaitez annuler ou modifier votre commande après l'achat.",
+    "Disclamer": "Avertissement:",
+    "TheWifianywhere": "Le service Wifi Anywhere est fourni par iMedia. Pour le support après vente, veuillez contacter directement iMedia",
+    "_pagina error": "tradducao pagina erro",
+    "error": "Page non trouvée"
+
+
 }
