--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -1,4 +1,5 @@
 {
+    "_navba": "tarducao do navbar",
     "SERVICOS": "SERVIÇOS",
     "PLANOS": "PLANOS",
     "FAQ": "FAQ",
@@ -7,15 +8,73 @@
     "FRA": "FRA",
     "POR": "POR",
     "ONLINE_BOOKING": "RESERVA ONLINE",
+    "_footer": "tarducao do footer, o q nao foi traduziodo em navbar",
     "RESERVAS": "Reservas",
     "CONTATOS": "Contatos",
     "_index": "traducao para index",
     "BENEFICIOS": "BENEFICIOS",
     "HIW": "COMO FUNCIONA",
-    "RESERVA_ONLINE": "Reserva Online",
-    "RYP": "Recebe o Pacote",
-    "EIA": "Desfruta do wifianywhere",
-    "RWD": "Retorna o Despositivo Wi-fi",
-    "TO": "Melhores Ofertas",
-    "PN": "Nome do Plano"
+    "RESERVA_ONLINE": "RESERVA ONLINE",
+    "RYP": "RECEBA SEU PACOTE",
+    "EIA": "DESFRUTA DO WIFIANYWHERE",
+    "RWD": "RETORNA O DESPOSITIVO WI-FI",
+    "TO": "MELHORES OFERTAS",
+    "PN": "Nome do Plano",
+    "_servicos": "traducao para servicos",
+    "SN": "SOBRE NOS",
+    "CFUNC": "COMO FUNCIONA",
+    "ATD": "SOBRE O DESPOSITIVO",
+    "_planos": "traducao para planos",
+    "OWP": "NOSSO PLANO WIFI",
+    "_faq": "traducao faq",
+    "FAKQ": "PERGUNTAS FREQUENTES",
+    "GENERAL": "GERAL",
+    "USAGE": "USO",
+    "B_PAYMENT": "RESERVA E PAGAMENTO",
+    "P_SHIPPING": "PICKUP OU ENVIO",
+    "RETURN": "RETORNAR",
+    "MOD_CAN": "MODIFICACAO E CANCELAMENTO",
+    "_booking": "traducao booking",
+    "BOOKING": "RESERVA",
+    "ORDER": "ORDEM",
+    "BI": "INFORMAÇÕES DE PAGAMENTO",
+    "CCH": "CONFIRME E CHECKOUT",
+    "SN_DAYWIFI": "Selecione o número de dias para wifi",
+    "CPU_LOC": "confirmar local de retirada",
+    "FN": "Número de voo (opcional)",
+    "PICKUP_DATE":"Data de retirada",
+    "CR_LOC":"Confirme o local de retorno",
+    "NEXT": "PROXIMO",
+    "FNAME": "Primeiro Nome",
+    "LNAME": "Ultimo Nome",
+    "SADDRESS": "Endereço",
+    "city": "Cidade",
+    "Zcode": "Codigo Postal",
+    "Phone": "Telefone",
+    "Country": "País",
+    "Email": "Email",
+    "BACK": "ANTERIOR",
+    "T_CONDITION": "Termos e Condições",
+    "IAGRY": "Eu agrido ao",
+    "PPAY": "PROSSIGA PARA O PAGAMENTO",
+    "TOTAL": "TOTAL",
+    "Duration": "Duracão",
+    "Ending": "Final",
+    "Starting": "Iniciando",
+    "days": "dias",
+    "CNumber": "Número do cartão",
+    "cardExpiryDate": "data de expiração do cartão",
+    "CardHolderName": "Nome do Titular",
+    "CVC": "CVC",
+    "PAY": "PAGAR",
+    "SUMARY": "SUMARIO",
+    "WP": "Wifi Plan",
+    "C_Policy": "Política de cancelamento:",
+    "Refunds":"Os reembolsos são possíveis até 4 dias antes da data de retirada selecionada do WiFi. Cancelamentos WiFi após este ponto não são reembolsáveis. Por favor, entre em contato conosco via support@wifianywhere.com se você deseja cancelar ou alterar o seu pedido após a compra.",
+    "Disclamer": "Advertencia:",
+    "TheWifianywhere": "O serviço Wifi Anywhere é fornecido pelo iMedia. Para suporte pós-vendas, entre em contato diretamente com iMedia",
+    "_pagina error": "tradducao pagina erro",
+    "error": "Pagina nao encontrada"
+
+
 }
