add or tradution

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -74,7 +74,8 @@
     "Disclamer": "Disclamer:",
     "TheWifianywhere": "The Wifi Anywhere service is provided by iMedia. For post sales support, please contact iMedia directly",
     "_pagina error": "tradducao pagina erro",
-    "error": "pag not found"
+    "error": "pag not found",
+    "OR" : "or"
 
 
 }
