--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -74,7 +74,8 @@
     "Disclamer": "Advertencia:",
     "TheWifianywhere": "O serviço Wifi Anywhere é fornecido pelo iMedia. Para suporte pós-vendas, entre em contato diretamente com iMedia",
     "_pagina error": "tradducao pagina erro",
-    "error": "Pagina nao encontrada"
+    "error": "Pagina nao encontrada",
+    "OR" : "ou"
 
 
 }
