--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -74,7 +74,8 @@
     "Disclamer": "Avertissement:",
     "TheWifianywhere": "Le service Wifi Anywhere est fourni par iMedia. Pour le support après vente, veuillez contacter directement iMedia",
     "_pagina error": "tradducao pagina erro",
-    "error": "Page non trouvée"
+    "error": "Page non trouvée",
+    "OR" : "ou"
 
 
 }
