fix lingua changer

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4,9 +4,8 @@
     "PLANOS": "PLANS",
     "FAQ": "FAQ",
     "ENTRAR": "LOGIN",
-    "ENG": "ING",
-    "FRA": "FRE",
-    "POR": "POR",
+    "PERFIL": "Profile",
+    "SAIR"  : "Logout", 
     "ONLINE_BOOKING": "ONLINE BOOKING",
     "_footer": "tarducao do footer, o q nao foi traduziodo em navbar",
     "RESERVAS": "Booking",
