--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -4,9 +4,8 @@
     "PLANOS": "PLANS",
     "FAQ": "FAQ",
     "ENTRAR": "ENTRER",
-    "ENG": "ANG",
-    "FRA": "FRA",
-    "POR": "POR",
+    "PERFIL": "Profil",
+    "SAIR"  : "Déconnecter", 
     "ONLINE_BOOKING": "RESERVATION EN LIGNE",
     "_footer": "tarducao do footer, o q nao foi traduziodo em navbar",
     "RESERVAS": "En ligne",
