--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -4,9 +4,8 @@
     "PLANOS": "PLANOS",
     "FAQ": "FAQ",
     "ENTRAR": "ENTRAR",
-    "ENG": "ENG",
-    "FRA": "FRA",
-    "POR": "POR",
+    "PERFIL": "Perfil",
+    "SAIR"  : "Sair", 
     "ONLINE_BOOKING": "RESERVA ONLINE",
     "_footer": "tarducao do footer, o q nao foi traduziodo em navbar",
     "RESERVAS": "Reservas",
