--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -2,6 +2,7 @@
     "_navba": "tarducao do navbar",
     "SERVICOS": "SERVICES",
     "PLANOS": "PLANS",
+    "PLANO": "Plans",
     "FAQ": "FAQ",
     "ENTRAR": "ENTRER",
     "PERFIL": "Profil",
