--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -2,6 +2,7 @@
     "_navba": "tarducao do navbar",
     "SERVICOS": "SERVIÇOS",
     "PLANOS": "PLANOS",
+    "PLANO": "Planos",
     "FAQ": "FAQ",
     "ENTRAR": "ENTRAR",
     "PERFIL": "Perfil",
