traducao modulo login/registar/perfil user/editar perfil user

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -79,7 +79,6 @@
     "_login": "traducao para login",
     "Login": "Login",
     "Sign_up": "Sign up",
-    "Email": "E-mail",
     "Password": "Password",
     "Remember_me": "Remember me",
     "Esqueceu_a_senha?":"Forgot password?",
@@ -89,5 +88,32 @@
     "Apelido": "Surname",
     "Repeat Password": "Repeat Password",
     "ByCreatingAccount":"By creating an account you agree to our",
-    "TermsPrivacy":"Terms & Privacy"
+    "TermsPrivacy":"Terms & Privacy",
+    "_perfil":"traducao perfil user",
+    "MyInfo":"MY INFORMATION",
+    "Email2": "EMAIL",
+    "adress":"ADDRESS",
+    "city2":"CITY",
+    "country":"COUNTRY",
+    "lastName":"SURNAME",
+    "phone":"PHONE / MOVEL",
+    "biling_adress":"COLLECTION ADDRESS",
+    "zip_code":"ZIP CODE",
+    "MinhasReservas":"MY RESERVATIONS",
+   "ReservasAtuais":"CURRENT RESERVES",
+   "ReservasAnteriores":"PREVIOUS RESERVATIONS",
+   "Select":"Select",
+   "Pacote":"Package",
+   "RETURN2": "Return date",
+   "Recarregar":"Recharge",
+   "NomeUsuario":"USER NAME",
+   "MudarPPasse":"CHANGE PASSWORDE",
+   "PPasseAntigo":"Old Password",
+   "NovoPPasse":"New Password",
+   "RepetePPasse":"Repeat New Password",
+   "Mudar":"Change",
+   "AutentFacGoogle":"Users with authentication by facebook or google can not change the password",
+   "EDITARINFORMAÇÕES":"EDIT INFORMATION",
+   "Cancelar":"Cancel",
+   "enviar":"Submit"
 }
