--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -79,15 +79,41 @@
     "_login": "traducao para login",
     "Login": "Je me connecte",
     "Sign_up": "S'inscrire",
-    "Email": "E-mail",
     "Password": "mot de passe",
     "Remember_me": "Souviens toi de moi",
     "Esqueceu_a_senha?": "Mot de passe oublié?",
     "Close": "Fermer",
     "PleaseFillAccount":"Veuillez remplir ce formulaire pour créer un compte",
-  "Nome": "Prenom",
-  "Apelido": "Nom de Famille",
-  "Repeat Password": "répéter le mot de passe",
-  "ByCreatingAccount":"En créant un compte, vous acceptez notre",
-  "TermsPrivacy":"Termes et confidentialité"
+    "Nome": "Prenom",
+    "Apelido": "Nom de Famille",
+    "Repeat Password": "répéter le mot de passe",
+    "ByCreatingAccount":"En créant un compte, vous acceptez notre",
+    "TermsPrivacy":"Termes et confidentialité",
+    "_perfil":"traducao perfil user",
+    "MyInfo":"MES INFORMATIONS",    
+    "Email2": "EMAIL",
+    "adress":"ADRESSE",
+    "city2":"CITY",
+    "country":"PAYS",
+    "lastName":"NOM",
+    "phone":"PHONE / MOVEL",
+    "biling_adress":"ADRESSE DE COLLECTION",
+    "zip_code":"ZIP CODE",
+    "MinhasReservas":"MES RÉSERVATIONS",
+   "ReservasAtuais":"RESERVES ACTUELLES",
+   "ReservasAnteriores":"PREVIOUS RESERVATIONS",
+   "Select":"Sélectionner",
+   "Pacote":"Package",
+   "RETURN2": "Date de retour",
+   "Recarregar":"Recharger",
+   "NomeUsuario":"NOM D'UTILISATEUR",
+   "MudarPPasse":"CHANGER LE MOT DE PASSE",
+   "PPasseAntigo":"Ancien mot de passe",
+   "NovoPPasse":"Nouveau mot de passe",
+   "RepetePPasse":"Répéter le mot de passe",
+   "Mudar":"Changer",
+   "AutentFacGoogle":"Les utilisateurs disposant d'une authentification par facebook ou google ne peuvent pas changer le mot de passe",
+   "EDITARINFORMAÇÕES":"MODIFIER LES INFORMATIONS",
+   "Cancelar":"Annuler",
+   "enviar":"Envoyer"
 }
