--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -73,13 +73,12 @@
     "Refunds":"Os reembolsos são possíveis até 4 dias antes da data de retirada selecionada do WiFi. Cancelamentos WiFi após este ponto não são reembolsáveis. Por favor, entre em contato conosco via support@wifianywhere.com se você deseja cancelar ou alterar o seu pedido após a compra.",
     "Disclamer": "Advertencia:",
     "TheWifianywhere": "O serviço Wifi Anywhere é fornecido pelo iMedia. Para suporte pós-vendas, entre em contato diretamente com iMedia",
-    "_pagina error": "tradducao pagina erro",
+    "_paginaerror": "tradducao pagina erro",
     "error": "Pagina nao encontrada",
     "OR" : "ou",
     "_login": "traducao para login",
     "Login": "Entrar",
     "Sign_up": "Inscrever-se",
-    "Email": "E-mail",
     "Password": "Palavra Passe",
     "Remember_me": "Lembre de mim",
     "Esqueceu_a_senha?": "Esqueceu a Palavra Passe?",
@@ -89,5 +88,36 @@
     "Apelido": "Apelido",
     "RepeatPassword": "Repita a Palavra Passe",
    "ByCreatingAccount":"Ao criar uma conta, você concorda com nossos",
-    "TermsPrivacy":"Termos e Privacidades"
+    "TermsPrivacy":"Termos e Privacidades",
+    "_perfil_user": "traducao para perfil user",
+    "ValidarConta": "Sua conta ainda nao foi validada, por favor verifique a sua conta para poder fazer operacoes no site",
+    "_perfil":"traducao perfil user",
+    "MyInfo":"MINHAS INFORMAÇÕES",
+    "Email2": "EMAIL",
+    "adress":"ENDEREÇO",
+    "city2":"CIDADE",
+    "country":"PAIS",
+    "lastName":"APELIDO",
+    "phone":"TELEFONE/MOVEL",
+    "biling_adress":"ENDEREÇO DE COBRANÇA",
+    "zip_code":"CODIGO ZIP",
+   "MinhasReservas":"MINHAS RESERVAS",
+   "ReservasAtuais":"RESERVAS ATUAIS",
+   "ReservasAnteriores":"RESERVAS ANTERIORES",
+   "Select":"Selecionar",
+   "Pacote":"Pacote",   
+   "RETURN2": "Data de Retorno",
+   "Recarregar":"Recarregar",
+   "NomeUsuario":"NOME DO USUARIO",
+   "MudarPPasse":"MUDAR PALAVRA PASSE",
+   "PPasseAntigo":"Palavra Passe antigo",
+   "NovoPPasse":"Novo Palavra Passe",
+   "RepetePPasse":"Repete Palavra Passe",
+   "Mudar":"Mudar",
+   "AutentFacGoogle":"Utilizadores com autenticacao pelo facebook ou google nao podem mudar a senha",
+   "EDITARINFORMAÇÕES":"EDITAR INFORMAÇÕES",
+   "Cancelar":"Cancelar",
+   "enviar":"Enviar"
+   
+   
 }
