--- a/i18n/en.json
+++ b/i18n/en.json
@@ -14,7 +14,7 @@
     "_index": "traducao para index",
     "BENEFICIOS": "BENEFITS",
     "HIW": "HOW IT WORKS",
-    "RESERVA_ONLINE": "BOOK ONLINE",
+    "RESERVA_ONLINE": "Book Online",
     "RYP": "Receive your Package",
     "EIA": "Enjoy Internet Anywhere",
     "RWD": "Return the Wifi Device",
