add translation line

--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -89,6 +89,8 @@
     "Repeat Password": "répéter le mot de passe",
     "ByCreatingAccount":"En créant un compte, vous acceptez notre",
     "TermsPrivacy":"Termes et confidentialité",
+    "_perfil_user": "traducao para perfil user",
+    "ValidarConta": "Sua conta ainda nao foi validada, por favor verifique a sua conta para poder fazer operacoes no site",
     "_perfil":"traducao perfil user",
     "MyInfo":"MES INFORMATIONS",    
     "Email2": "EMAIL",
