--- a/i18n/en.json
+++ b/i18n/en.json
@@ -89,6 +89,8 @@
     "Repeat Password": "Repeat Password",
     "ByCreatingAccount":"By creating an account you agree to our",
     "TermsPrivacy":"Terms & Privacy",
+    "_perfil_user": "traducao para perfil user",
+    "ValidarConta": "Sua conta ainda nao foi validada, por favor verifique a sua conta para poder fazer operacoes no site",
     "_perfil":"traducao perfil user",
     "MyInfo":"MY INFORMATION",
     "Email2": "EMAIL",
